exercise5/condor/668.0-error.txt
  File "Exercise5.py", line 59
    for ep in np.linspace(0.,0.3,num=300)
                                        ^
SyntaxError: invalid syntax
